# router/router.go
@@ -49,9 +49,20 @@ func InitRouter() *gin.Engine {
 	buttonOne.POST("GetButtonByMenuIdnForTransfer", api.GetButtonByMenuIdnForTransfer)
 	buttonOne.POST("GetAllButtonByMenuIdForTransfer", api.GetAllButtonByMenuIdForTransfer)
 	buttonOne.POST("GetButtonByMenuIdRoleIdForTransfer", api.GetButtonByMenuIdRoleIdForTransfer)
+	buttonOne.POST("AddButton", api.AddButton)
+	buttonOne.POST("UpdateButton", api.UpdateButton)
+	buttonOne.POST("DeleteButton", api.DeleteButton)
+	buttonOne.POST("GetAllButtonInfo", api.GetAllButtonInfo)
+	buttonOne.POST("GetButtonByID", api.GetButtonByID)
+
 	deptOne := router.Group("/Dept")
 	deptOne.POST("GetAllDeptForTransfer", api.GetAllDeptForTransfer)
 	deptOne.POST("GetDeptByUserIdForTransfer", api.GetDeptByUserIdForTransfer)
+	deptOne.POST("AddDept", api.AddDept)
+	deptOne.POST("UpdateDept", api.UpdateDept)
+	deptOne.POST("DeleteDept", api.DeleteDept)
+	deptOne.POST("GetAllDeptInfo", api.GetAllDeptInfo)
+	deptOne.POST("GetDeptByID", api.GetDeptByID)
 	roleOne := router.Group("/Role")
 	roleOne.POST("GetAllRoleForTransfer", api.GetAllRoleForTransfer)
 	roleOne.POST("GetRoleByUserIdForTransfer", api.GetRoleByUserIdForTransfer)
