# service/api/button.go
@@ -2,14 +2,18 @@ package api
 
 import (
 	"GoModDemo/consts"
+	"GoModDemo/model"
+
 	// "GoModDemo/model"
 	"GoModDemo/bill"
 	"GoModDemo/util"
 	"net/http"
+	"strings"
 
 	// "time"
 	// "github.com/google/uuid"
 	"encoding/json"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -254,6 +258,222 @@ func GetButtonByMenuIdRoleIdForTransfer(c *gin.Context) {
 		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
 		return
 	}
+	appG.Response(http.StatusOK, consts.SUCCESS, "", s)
+
+}
+
+// GetAllButtonInfo 前台条件获取按钮信息
+// @Summary 前台条件获取按钮信息
+// @Tags Button
+// @Description 前台条件获取按钮信息 请求主体: base64(ParameterStr=aaaa&PageSize=10&CurrentPage=1) 成功输出[]Button
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param ParameterStr formData string true "ParameterStr"
+// @Param PageSize formData int true "PageSize"
+// @Param CurrentPage formData int true "CurrentPage"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{[]Button},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /GetAllButtonInfo [post]
+func GetAllButtonInfo(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "前台条件获取按钮信息错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	ParameterStr := dists["ParameterStr"][0]
+	PageSize := dists["PageSize"][0]
+	CurrentPage := dists["CurrentPage"][0]
+	pageSize, err := strconv.Atoi(PageSize)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "参数异常", nil)
+		return
+	}
+	currentPage, err := strconv.Atoi(CurrentPage)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "参数异常", nil)
+		return
+	}
+	if ParameterStr == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+
+	data, err := bill.GetAllButtonInfo(ParameterStr, pageSize, currentPage)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	b, err := json.Marshal(*data)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	s := string(b)
+	appG.Response(http.StatusOK, consts.SUCCESS, "", s)
+}
+
+// DeleteButton 删除按钮信息
+// @Summary 删除按钮信息
+// @Tags Button
+// @Description 删除按钮信息 请求主体: base64(str=aaaa) 成功输出null
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param str formData string true "str"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /DeleteButton [post]
+func DeleteButton(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	str := dists["str"][0]
+	if str == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	date := strings.Split(str, ",")
+	err = bill.DeleteButton(date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	appG.Response(http.StatusOK, consts.SUCCESS, "", "")
+}
+
+// AddButton 新增按钮信息
+// @Summary 新增按钮信息
+// @Tags Button
+// @Description 新增按钮信息 请求主体: base64(str=aaaa) 成功输出null
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param str formData string true "str"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /AddButton [post]
+func AddButton(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	str := dists["str"][0]
+	if str == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	var date model.Button
+	err = json.Unmarshal([]byte(str), &date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	err = bill.AddButton(date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	appG.Response(http.StatusOK, consts.SUCCESS, "", "")
+}
+
+// UpdateButton 修改按钮信息
+// @Summary 修改按钮信息
+// @Tags Button
+// @Description 修改按钮信息 请求主体: base64(str=aaaa) 成功输出null
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param str formData string true "str"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /UpdateButton [post]
+func UpdateButton(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	str := dists["str"][0]
+	if str == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	var date model.Button
+	err = json.Unmarshal([]byte(str), &date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	err = bill.UpdateButton(date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	appG.Response(http.StatusOK, consts.SUCCESS, "", "")
+}
+
+// GetButtonByID 根据权限ID获取按钮信息
+// @Summary 根据权限ID获取按钮信息
+// @Tags Button
+// @Description 根据权限ID获取按钮信息 请求主体: base64(ID=aaaa) 成功输出Button
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param ID formData string true "ID"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{Button},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /GetButtonByID [post]
+func GetButtonByID(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "根据权限ID获取按钮信息错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	ID := dists["ID"][0]
+	if ID == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	role, err := bill.GetButtonByID(ID)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	b, err := json.Marshal(*role)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	s := string(b)
 	appG.Response(http.StatusOK, consts.SUCCESS, "", s)
 
 }
