# service/api/department.go
@@ -2,6 +2,10 @@ package api
 
 import (
 	"GoModDemo/consts"
+	"GoModDemo/model"
+	"strconv"
+	"strings"
+
 	// "GoModDemo/model"
 	"GoModDemo/bill"
 	"GoModDemo/util"
@@ -99,6 +103,222 @@ func GetDeptByUserIdForTransfer(c *gin.Context) {
 		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
 		return
 	}
+	appG.Response(http.StatusOK, consts.SUCCESS, "", s)
+
+}
+
+// GetAllDeptInfo 前台条件获取单位信息
+// @Summary 前台条件获取单位信息
+// @Tags Dept
+// @Description 前台条件获取单位信息 请求主体: base64(ParameterStr=aaaa&PageSize=10&CurrentPage=1) 成功输出[]Department
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param ParameterStr formData string true "ParameterStr"
+// @Param PageSize formData int true "PageSize"
+// @Param CurrentPage formData int true "CurrentPage"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{[]Department},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /GetAllDeptInfo [post]
+func GetAllDeptInfo(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	ParameterStr := dists["ParameterStr"][0]
+	PageSize := dists["PageSize"][0]
+	CurrentPage := dists["CurrentPage"][0]
+	pageSize, err := strconv.Atoi(PageSize)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "参数异常", nil)
+		return
+	}
+	currentPage, err := strconv.Atoi(CurrentPage)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "参数异常", nil)
+		return
+	}
+	if ParameterStr == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+
+	data, err := bill.GetAllDeptInfo(ParameterStr, pageSize, currentPage)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	b, err := json.Marshal(*data)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	s := string(b)
+	appG.Response(http.StatusOK, consts.SUCCESS, "", s)
+}
+
+// DeleteDept 删除部门信息
+// @Summary 删除部门信息
+// @Tags Dept
+// @Description 删除部门信息 请求主体: base64(str=aaaa) 成功输出null
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param str formData string true "str"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /DeleteDept [post]
+func DeleteDept(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	str := dists["str"][0]
+	if str == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	date := strings.Split(str, ",")
+	err = bill.DeleteDept(date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	appG.Response(http.StatusOK, consts.SUCCESS, "", "")
+}
+
+// AddDept 新增部门信息
+// @Summary 新增部门信息
+// @Tags Dept
+// @Description 新增部门信息 请求主体: base64(str=aaaa) 成功输出null
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param str formData string true "str"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /AddDept [post]
+func AddDept(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	str := dists["str"][0]
+	if str == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	var date model.Department
+	err = json.Unmarshal([]byte(str), &date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	err = bill.AddDept(date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	appG.Response(http.StatusOK, consts.SUCCESS, "", "")
+}
+
+// UpdateDept 修改单位信息
+// @Summary 修改单位信息
+// @Tags Dept
+// @Description 修改单位信息 请求主体: base64(str=aaaa) 成功输出null
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param str formData string true "str"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /UpdateDept [post]
+func UpdateDept(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	str := dists["str"][0]
+	if str == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	var date model.Department
+	err = json.Unmarshal([]byte(str), &date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	err = bill.UpdateDept(date)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	appG.Response(http.StatusOK, consts.SUCCESS, "", "")
+}
+
+// GetDeptByID 根据权限ID获取部门信息
+// @Summary 根据权限ID获取部门信息
+// @Tags Dept
+// @Description 根据权限ID获取权限信息 请求主体: base64(ID=aaaa) 成功输出Dept
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param ID formData string true "ID"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{Dept},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /GetDeptByID [post]
+func GetDeptByID(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "根据权限ID获取部门信息错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	ID := dists["ID"][0]
+	if ID == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	role, err := bill.GetDeptByID(ID)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	b, err := json.Marshal(*role)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	s := string(b)
 	appG.Response(http.StatusOK, consts.SUCCESS, "", s)
 
 }
